--- a/app/src/debug/res/layout/drawer_debug_layout.xml
+++ b/app/src/debug/res/layout/drawer_debug_layout.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:columnCount="2"
-    tools:ignore="UselessParent">
+    tools:ignore="UselessParent"
+    android:background="@android:color/background_light">
 
     <LinearLayout
         android:layout_columnSpan="2"
@@ -44,107 +45,24 @@
     <!-- CONTEXTUAL SECTION -->
 
     <TextView
-        android:id="@+id/debug_contextual_title"
         android:layout_columnSpan="2"
         android:layout_width="0dp"
         android:layout_gravity="start|fill_horizontal"
-        android:text="Contextual Actions"
-        android:visibility="gone"
-        style="@style/Widget.DebugDrawer.Header" />
-
-    <LinearLayout
-        android:id="@+id/debug_contextual_list"
-        android:layout_columnSpan="2"
-        android:layout_width="0dp"
-        android:layout_gravity="start|fill_horizontal"
-        android:visibility="gone"
-        android:orientation="horizontal" />
-
-    <!-- NETWORK SECTION -->
-
-    <TextView
-        android:layout_columnSpan="2"
-        android:layout_width="0dp"
-        android:layout_gravity="start|fill_horizontal"
-        android:text="Network"
+        android:text="App install"
         style="@style/Widget.DebugDrawer.Header" />
 
     <TextView
         android:layout_gravity="start|center_vertical"
-        android:text="Endpoint"
+        android:text="Install Dummy"
         style="@style/Widget.DebugDrawer.RowTitle" />
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        android:gravity="center_vertical">
-
-        <Spinner
-            android:id="@+id/debug_network_endpoint"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="1" />
-
-        <ImageButton
-            android:id="@+id/debug_network_endpoint_edit"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:src="@android:drawable/ic_menu_edit"
-            android:background="?android:attr/actionBarItemBackground"
-            android:visibility="gone" />
-    </LinearLayout>
-
-    <TextView
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Install"
         android:layout_gravity="start|center_vertical"
-        android:text="Delay"
-        style="@style/Widget.DebugDrawer.RowTitle" />
+        android:id="@+id/debug_app_install_button" />
 
-    <Spinner
-        android:id="@+id/debug_network_delay"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Variance"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Spinner
-        android:id="@+id/debug_network_variance"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Error"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Spinner
-        android:id="@+id/debug_network_error"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Proxy"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Spinner
-        android:id="@+id/debug_network_proxy"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Logging"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Spinner
-        android:id="@+id/debug_network_logging"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
 
     <!-- USER INTERFACE SECTION -->
 
@@ -155,35 +73,6 @@
         android:text="User Interface"
         style="@style/Widget.DebugDrawer.Header" />
 
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Animations"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Spinner
-        android:id="@+id/debug_ui_animation_speed"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Pixel Grid"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Switch
-        android:id="@+id/debug_ui_pixel_grid"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Pixel Scale"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Switch
-        android:id="@+id/debug_ui_pixel_ratio"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget" />
 
     <TextView
         android:layout_gravity="start|center_vertical"
@@ -238,7 +127,7 @@
 
     <TextView
         android:layout_gravity="start|center_vertical"
-        android:text="SHA"
+        android:text="Git-SHA"
         style="@style/Widget.DebugDrawer.RowTitle" />
 
     <TextView
@@ -329,124 +218,6 @@
 
     <TextView
         android:id="@+id/debug_device_api"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <!-- PICASSO SECTION -->
-
-    <TextView
-        android:layout_columnSpan="2"
-        android:layout_width="0dp"
-        android:layout_gravity="start|fill_horizontal"
-        android:text="Picasso"
-        style="@style/Widget.DebugDrawer.Header" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Indicators"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <Switch
-        android:id="@+id/debug_picasso_indicators"
-        android:layout_gravity="start|center_vertical"
-        style="@style/Widget.DebugDrawer.RowWidget" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Cache"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_cache_size"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Hits"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_cache_hit"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Misses"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_cache_miss"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Decoded"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_decoded"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Total"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_decoded_total"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Average"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_decoded_avg"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="Transformed"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_transformed"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Total"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_transformed_total"
-        android:layout_width="0dp"
-        android:layout_gravity="start|center_vertical|fill_horizontal"
-        style="@style/Widget.DebugDrawer.RowValue" />
-
-    <TextView
-        android:layout_gravity="start|center_vertical"
-        android:text="   Average"
-        style="@style/Widget.DebugDrawer.RowTitle" />
-
-    <TextView
-        android:id="@+id/debug_picasso_transformed_avg"
         android:layout_width="0dp"
         android:layout_gravity="start|center_vertical|fill_horizontal"
         style="@style/Widget.DebugDrawer.RowValue" />
