--- a/app/src/main/res/layout/app_list_cell.xml
+++ b/app/src/main/res/layout/app_list_cell.xml
@@ -19,7 +19,8 @@
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="@android:color/darker_gray"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:id="@+id/app_list_cell_root">
 
     <ImageView
         android:layout_width="wrap_content"
