--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,6 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppTheme.AppList.Button" parent=""></style>
+
 </resources>
