--- a/app/src/main/res/layout/app_list_layout.xml
+++ b/app/src/main/res/layout/app_list_layout.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent" />
 
     <Button
+        style="@style/AppTheme.AppList.Button"
         android:id="@+id/app_list_layout_clear_actions_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,11 +22,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/appList_bottomRightButton_margin"
         android:layout_marginEnd="@dimen/appList_bottomRightButton_margin"
-        android:elevation="10dp"
         android:layout_marginRight="@dimen/appList_bottomRightButton_margin"
         android:text="Clear List" />
 
     <Button
+        style="@style/AppTheme.AppList.Button"
         android:id="@+id/app_list_layout_remove_app_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,6 +39,7 @@
         android:layout_above="@id/app_list_layout_clear_actions_button" />
 
     <ToggleButton
+        style="@style/AppTheme.AppList.Button"
         android:id="@+id/app_list_layout_record_toggle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
