--- a/app/src/main/res/layout/app_list_cell.xml
+++ b/app/src/main/res/layout/app_list_cell.xml
@@ -20,18 +20,22 @@
     android:layout_height="70dp"
     android:background="@android:color/darker_gray"
     android:gravity="center_vertical"
-    android:id="@+id/app_list_cell_root">
+    android:id="@+id/app_list_cell_root"
+    android:padding="7dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/app_list_cell_app_icon"
-        android:src="@drawable/app_icon"
-        android:layout_margin="10dp" />
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:src="@drawable/ic_launcher_app" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:text="App Name"
         android:id="@+id/app_list_cell_app_name" />
 
