--- a/app/src/debug/res/layout/drawer_debug_layout.xml
+++ b/app/src/debug/res/layout/drawer_debug_layout.xml
@@ -43,14 +43,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:textColor="@android:color/black"
-                style="@android:style/TextAppearance.Holo.Widget.ActionBar.Title" />
+                style="@style/Widget.DebugDrawer.Header.Title" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/development_settings"
-                style="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle" />
+                style="@style/Widget.DebugDrawer.Header.Subtitle" />
         </LinearLayout>
 
         <ImageView
