--- a/app/src/debug/res/values/debug_styles.xml
+++ b/app/src/debug/res/values/debug_styles.xml
@@ -33,12 +33,20 @@
 
     <style name="Widget.DebugDrawer.RowTitle" parent="Widget.DebugDrawer.RowWidget">
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:textColor">?android:attr/textColorSecondary</item>
+        <item name="android:textColor">#333</item>
         <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Widget.DebugDrawer.RowValue" parent="Widget.DebugDrawer.RowWidget">
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textColor">#111</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Widget.DebugDrawer.Header.Title" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="Widget.DebugDrawer.Header.Subtitle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
+        <item name="android:textColor">@android:color/darker_gray</item>
     </style>
 </resources>
