--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,4 +35,9 @@
 
     <style name="AppTheme.AppList.Button" parent=""></style>
 
+    <style name="AppTheme.FloatingButton">
+        <item name="fab_colorNormal">@color/primary</item>
+        <item name="fab_colorPressed">@color/accent</item>
+    </style>
+
 </resources>
