--- a/app/src/main/res/layout/app_list_cell.xml
+++ b/app/src/main/res/layout/app_list_cell.xml
@@ -18,12 +18,15 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@android:color/darker_gray"
+    android:background="@color/white"
     android:gravity="center_vertical"
     android:id="@+id/app_list_cell_root"
-    android:padding="7dp">
+    android:padding="8dp"
+    android:layout_marginBottom="3dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp">
 
-    <ImageView
+<ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:id="@+id/app_list_cell_app_icon"
