--- a/app/src/main/res/layout/app_list_cell.xml
+++ b/app/src/main/res/layout/app_list_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright 2014 Markus Pöschl
+  ~ Copyright 2014 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -26,7 +26,7 @@
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp">
 
-<ImageView
+    <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:id="@+id/app_list_cell_app_icon"
