--- a/app/src/main/res/layout/cell_navigation_drawer_item.xml
+++ b/app/src/main/res/layout/cell_navigation_drawer_item.xml
@@ -15,10 +15,12 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cell_navigation_root"
     android:layout_width="fill_parent"
     android:layout_height="48dp">
 
     <ImageView
+        android:id="@+id/cell_navigation_icon"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:src="@drawable/ic_launcher_app"
@@ -29,6 +31,7 @@
         android:layout_centerVertical="true" />
 
     <TextView
+        android:id="@+id/cell_navigation_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cell Title"
