--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -13,6 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -32,7 +33,7 @@
             android:background="?attr/colorPrimary" />
 
         <FrameLayout
-            android:id="@+id/mainontent"
+            android:id="@+id/mainContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
