--- a/app/src/debug/res/layout/debug_simple_spinner_item.xml
+++ b/app/src/debug/res/layout/debug_simple_spinner_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2014 Markus Poeschl
+  ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,5 +27,6 @@
         android:text="Item Text"
         android:id="@+id/simple_spinner_item_text1"
         android:layout_gravity="end|right"
-        style="Widget.DebugDrawer.RowValue" />
+        style="Widget.DebugDrawer.RowValue"
+        tools:ignore="HardcodedText,RtlHardcoded" />
 </LinearLayout>
