--- a/app/src/main/res/layout/cell_app_list.xml
+++ b/app/src/main/res/layout/cell_app_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2014 Markus Poeschl
+  ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="70dp"
@@ -24,7 +25,8 @@
     android:padding="8dp"
     android:layout_marginBottom="1dp"
     android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp">
+    android:layout_marginRight="2dp"
+    tools:ignore="Overdraw">
 
     <ImageView
         android:layout_width="48dp"
@@ -32,7 +34,8 @@
         android:id="@+id/app_list_cell_app_icon"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
-        android:src="@drawable/ic_launcher_app" />
+        android:src="@drawable/ic_launcher_app"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,6 +43,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:text="App Name"
-        android:id="@+id/app_list_cell_app_name" />
+        android:id="@+id/app_list_cell_app_name"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
