--- a/app/src/main/res/layout/cell_navigation_drawer_item.xml
+++ b/app/src/main/res/layout/cell_navigation_drawer_item.xml
@@ -15,6 +15,7 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cell_navigation_root"
     android:layout_width="fill_parent"
     android:layout_height="48dp">
@@ -28,7 +29,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="@dimen/navigation_drawer_side_offset"
         android:layout_marginLeft="@dimen/navigation_drawer_side_offset"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/cell_navigation_title"
@@ -43,5 +45,6 @@
         android:layout_marginStart="@dimen/navigation_drawer_title_offset"
         android:layout_marginLeft="@dimen/navigation_drawer_title_offset"
         android:layout_marginEnd="@dimen/navigation_drawer_side_offset"
-        android:layout_marginRight="@dimen/navigation_drawer_side_offset" />
+        android:layout_marginRight="@dimen/navigation_drawer_side_offset"
+        tools:ignore="HardcodedText" />
 </RelativeLayout>
