Tried to make setup app test work Tried to disable animation during tests.

--- a/app/src/debug/res/values/debug_strings.xml
+++ b/app/src/debug/res/values/debug_strings.xml
@@ -18,5 +18,5 @@
 
 <resources>
     <string name="development_settings">Development Settings</string>
-    <string name="debug_drawer_welcome">Debug settings are available in this drawer.</string>
+    <string name="debug_drawer_welcome">Debug settings are available in the right debug drawer.</string>
 </resources>
