Make color palette for grey theme. Replaced the old

--- a/app/src/main/res/layout/cell_app_list.xml
+++ b/app/src/main/res/layout/cell_app_list.xml
@@ -19,7 +19,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@color/white"
+    android:background="@color/background"
     android:gravity="center_vertical"
     android:id="@+id/app_list_cell_root"
     android:padding="8dp"
