--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -25,10 +25,7 @@
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
 
-        <item name="android:navigationBarColor">@color/nav_bar_color</item>
+        <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
 
-    <style name="AppTheme.AppList.Button" parent="">
-        <item name="android:elevation">10dp</item>
-    </style>
 </resources>
