--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,21 +23,28 @@
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light">
         <!--   your app branding color for the app bar -->
-        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimary">@color/primary_main</item>
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="colorAccent">@color/accent</item>
-        <item name="android:textColorPrimary">@color/textColorPrimary</item>
-        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="colorAccent">@color/accent_main</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColorHint">@color/hint</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:divider">@color/divider</item>
         <item name="windowActionBar">false</item>
     </style>
 
-    <style name="AppTheme.AppList.Button" parent=""></style>
-
     <style name="AppTheme.FloatingButton">
-        <item name="fab_colorNormal">@color/primary</item>
-        <item name="fab_colorPressed">@color/accent</item>
+        <item name="fab_colorNormal">@color/accent_main</item>
+        <item name="fab_colorPressed">@color/accent_dark</item>
+    </style>
+
+    <style name="AppTheme.FloatingMenuButton" parent="">
+        <item name="fab_addButtonColorNormal">@color/accent_main</item>
+        <item name="fab_addButtonColorPressed">@color/accent_dark</item>
+        <item name="fab_expandDirection">up</item>
     </style>
 
 </resources>
