Added activity hierarchy and animations for activities

--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2015 Markus Poeschl
   ~
@@ -14,12 +15,9 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <dimen name="appList_bottomRightButton_margin">5dp</dimen>
-    <dimen name="navigation_drawer_title_offset">72dp</dimen>
-    <dimen name="navigation_drawer_side_offset">16dp</dimen>
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+       android:fromAlpha="1.0"
+       android:toAlpha="0.0"
+       android:duration="@integer/animation_slow_duration_activities">
 
-    <integer name="animation_duration_activities">300</integer>
-    <integer name="animation_fast_duration_activities">200</integer>
-    <integer name="animation_slow_duration_activities">500</integer>
-</resources>
+</alpha>
