--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2014 Markus Poeschl
+  ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -45,6 +45,12 @@
         <item name="fab_addButtonColorNormal">@color/accent_main</item>
         <item name="fab_addButtonColorPressed">@color/accent_dark</item>
         <item name="fab_expandDirection">up</item>
+    </style>
+
+    <style name="AppTheme.NavigationDrawer.Title" parent="">
+        <item name="android:textColor">@color/background</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
