--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2014 Markus Poeschl
+  ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -37,7 +37,7 @@
         android:layout_marginBottom="@dimen/appList_bottomRightButton_margin"
         android:layout_marginEnd="@dimen/appList_bottomRightButton_margin"
         android:layout_marginRight="@dimen/appList_bottomRightButton_margin"
-        style="@style/AppTheme.FloatingMenuButton">
+        style="@style/TryAndRemoveTheme.FloatingMenuButton">
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
@@ -45,7 +45,7 @@
             fab:fab_icon="@drawable/ic_menu_delete"
             fab:fab_title="@string/app_list_layout_remove_apps_title"
             android:id="@+id/app_list_layout_remove_action_button"
-            style="@style/AppTheme.FloatingButton"/>
+            style="@style/TryAndRemoveTheme.FloatingButton"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
             fab:fab_title="@string/app_list_layout_clear_app_list_title"
             fab:fab_icon="@drawable/ic_menu_clear"
             android:id="@+id/app_list_layout_clear_action_button"
-            style="@style/AppTheme.FloatingButton"/>
+            style="@style/TryAndRemoveTheme.FloatingButton"/>
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </RelativeLayout>
