--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -46,7 +46,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            style="@style/AppTheme.NavigationDrawer.Title"/>
+            style="@style/TryAndRemoveTheme.NavigationDrawer.Title"/>
 
     </RelativeLayout>
 
