--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -17,15 +17,14 @@
 <resources>
 
     <!-- Theme for Material Design, > Android 5.0 -->
-    <style name="AppTheme" parent="AppTheme.Base">
-        <item name="android:windowActivityTransitions">true</item>
+    <style name="TryAndRemoveTheme" parent="TryAndRemoveTheme.Base">
+    <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
 
-        <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
 
 </resources>
