--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
     </style>
 
     <style name="TryAndRemoveTheme.Base" parent="Theme.AppCompat.Light">
-    <!--   your app branding color for the app bar -->
+        <!--   your app branding color for the app bar -->
         <item name="colorPrimary">@color/primary_main</item>
         <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/primary_dark</item>
@@ -34,23 +34,28 @@
         <item name="android:windowBackground">@color/background</item>
         <item name="android:divider">@color/divider</item>
         <item name="windowActionBar">false</item>
+        <item name="drawerArrowStyle">@style/TryAndRemoveTheme.Toolbar</item>
     </style>
 
     <style name="TryAndRemoveTheme.FloatingButton">
-    <item name="fab_colorNormal">@color/accent_main</item>
+        <item name="fab_colorNormal">@color/accent_main</item>
         <item name="fab_colorPressed">@color/accent_dark</item>
     </style>
 
     <style name="TryAndRemoveTheme.FloatingMenuButton" parent="">
-    <item name="fab_addButtonColorNormal">@color/accent_main</item>
+        <item name="fab_addButtonColorNormal">@color/accent_main</item>
         <item name="fab_addButtonColorPressed">@color/accent_dark</item>
         <item name="fab_expandDirection">up</item>
     </style>
 
     <style name="TryAndRemoveTheme.NavigationDrawer.Title" parent="">
-    <item name="android:textColor">@color/background</item>
+        <item name="android:textColor">@color/background</item>
         <item name="android:textSize">22sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TryAndRemoveTheme.Toolbar" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/primary_text_light</item>
     </style>
 
 </resources>
