--- a/app/src/main/res/layout/cell_record_spinner_actionbar.xml
+++ b/app/src/main/res/layout/cell_record_spinner_actionbar.xml
@@ -14,22 +14,27 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="3dp">
+    android:layout_width="@dimen/toolbar_spinner_width"
+    android:layout_height="@dimen/abc_action_bar_default_height_material"
+    android:padding="@dimen/abc_action_bar_default_padding_material"
+    android:gravity="start|center_vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cell_record_spinner_icon"
-        android:src="@drawable/ic_launcher_app" />
+        android:src="@drawable/ic_launcher_app"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/cell_record_spinner_text"
-        android:layout_gravity="center_vertical" />
-</LinearLayout>
+        android:src="@drawable/spinner_triangle"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+</RelativeLayout>
