--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,4 +63,9 @@
         <item name="android:textColor">@color/primary_text_light</item>
     </style>
 
+    <style name="TryAndRemoveTheme.Toolbar.Spinner" parent="Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:dropDownSelector">@color/primary_dark</item>
+    </style>
+
 </resources>
