Revert "Removed app record toggle button, added spinner to topbar"
This reverts commit b909f60f2cad9e5f7c675f8f513fffbdc98bd516.

--- a/app/src/main/res/menu/app_list_toolbar_actions.xml
+++ b/app/src/main/res/menu/app_list_toolbar_actions.xml
@@ -16,6 +16,11 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/app_list_toolbar_action_record"
+        android:icon="@drawable/ic_action_record"
+        app:showAsAction="always"
+        android:title="@string/app_list_toolbar_action_record_title" />
 
     <item
         android:id="@+id/app_list_toolbar_action_refresh"
